--- a/Makefile.txt
+++ b/Makefile.txt
@@ -9,7 +9,7 @@ MPI_INCLUDE = -I/opt/ibm/spectrum_mpi/include
 MPI_LIB     = -L/opt/ibm/spectrum_mpi/lib -lmpiprofilesupport -lmpi_ibm
 
 SRC_CPP = wave_mpi_cu.cpp
-SRC_CU  = kernel.cu
+SRC_CU  = kernel_1.cu
 
 TARGET = run_mpi_cu
 
